--- a/todo/templates/todo/edit.html
+++ b/todo/templates/todo/edit.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add todo</title>
+    <title>Edit todo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
-    <h1>Add Todo</h1>
+    <h1>Edit Todo</h1>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -15,7 +15,7 @@
             <div class="card-body">
               <form method="POST">
                 {% csrf_token %} {{form.as_p}}
-                <button type="submit" class="btn btn-primary">Add</button>
+                <button type="submit" class="btn btn-primary">Edit</button>
               </form>
             </div>
           </div>
