--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -9,19 +9,19 @@
     <div class="container">
         <h1>Todo List</h1>
         <p>
-            <a href=""><i class="bi-plus"></i>Add Todo</a>
+            <a href="{% url 'create' %}"><i class="bi-plus"></i>Add Todo</a>
             <a href="" class="btn btn-primary" style="float:right">Done Todo</a>
         </p>
         <ul class="list-group">
             {% for todo in todos %}
                 <li class="list-group-item">
-                    <a href="">{{todo.title}}</a>
+                    <a href="{% url 'detail' pk=todo.pk %}">{{todo.title}}</a>
                     {% if todo.important %}
                         <span class="badge badge-danger">!</span>
                     {% endif %}
                     <div style="float:right">
                         <a href="" class="btn btn-danger">Done</a>
-                        <a href="" class="btn btn-outline-primary">Edit</a>
+                        <a href="{% url 'edit' pk=todo.pk %}" class="btn btn-outline-primary">Edit</a>
                     </div>
                 </li>
             {% endfor %}
